[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/3d_models/enemy_units/payana/payana_mesh.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/HealthBarr3D.tscn" type="PackedScene" id=3]
[ext_resource path="res://script/enemy_payana.gd" type="Script" id=4]

[sub_resource type="CylinderShape" id=2]
radius = 1.35018

[sub_resource type="CylinderShape" id=1]
radius = 1.49675

[node name="StaticBody" type="StaticBody" groups=[
"enemy",
]]
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="mesh" parent="." instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]

[node name="HealthBarr3D" parent="." instance=ExtResource( 3 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 1.71558, 0 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
